utils/echoserver/local/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
spec:
  template:
    spec:
      containers:
        - name: echoserver
          resources:
            requests:
              cpu: 5m
              memory: 5Mi
              ephemeral-storage: 1Mi
            limits:
              cpu: 10m
              memory: 10Mi
              ephemeral-storage: 2Mi
